--- a/assets/material/notebook3_solutions.ipynb
+++ b/assets/material/notebook3_solutions.ipynb
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,10 +104,10 @@
             "x icwsm2025/.DS_Store\n",
             "x icwsm2025/minorities-labels.csv\n",
             "x icwsm2025/politics-edges.txt\n",
-            "100  102k  100  102k    0     0   714k      0 --:--:-- --:--:-- --:--:--  715k\n",
-            "\n",
+            "x icwsm2025/politics-labels.csv\n",
             "x icwsm2025/guncontrol-edges.txt\n",
-            "x icwsm2025/minorities-edges.txt\n",
+            "100  102k  100  102k    0     0   265k      0 --:--:-- --:--:-- --:--:--  265k\n",
+            "\n",
             "x icwsm2025/sample.json\n",
             "x icwsm2025/guncontrol-labels.csv\n"
           ]
@@ -625,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 125,
       "metadata": {
         "id": "74i96h_Su-Fj"
       },
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 126,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 127,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
